# crexx-rag

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
cli/: main.cpp
cmake/: CliWorkQueueConsumersSmoke.cmake  CrexxDeterministicExtractorSmoke.cmake  CrexxGenericPipelineSmoke.cmake  CrexxHybridExtractorSmoke.cmake  CrexxProfileSmoke.cmake  McpSmoke.cmake  UseCaseWrapperSmoke.cmake
core/: chunker.cpp  chunker.h  ragcore.cpp
crexx/: cprag.crexx
crexx/plugins/rag/: rxrag.c
crexx/profiles/: balanced.crexx  pipeline_profile.crexx
crexx/profiles/history/: deterministic_extract.crexx  hybrid_ingest_extract.crexx  stage1b_adjudicate_candidates.crexx  stage2_seed_graph.crexx  stage2b_rank_queue.crexx  stage3_extract_queue.crexx
docs/: architecture-vocabulary.md  architecture.md  crexx-integration-issues.md  crexx-plugin-pattern.md  domain-profiles.md  framework-closure-plan.md  graph-retrieval-methodology.md  how-it-fits-together.md  local-embeddings.md  pipeline-status.md  scotland-qa-test-notes.md  test-strategy.md  tutorial-import-improve-query.md  use-cases.md  working-notes.md
examples/: seed.sh
examples/corpora/history/: gutenberg-59468-scottish-highlands-clans-regiments-vol-1.txt  gutenberg-59469-scottish-highlands-clans-regiments-vol-2.txt  gutenberg-6156-athens-its-rise-and-fall.txt  scottish-clans-regression-tests.md
include/crexx_rag/: ragcore.h
mcp/: main.cpp
prompts/: scotland-corpus-qa.md  scotland-qa-agent-test-AGENTS.md
scripts/: graph_value_triage_benchmark.sh  run_background_improvement.sh  run_history_pipeline.sh  run_use_case.sh  scope_llm_assist_benchmark.sh  scotland_qa_search.sh  setup_llama_cpp_embedder.sh  start_local_llama_servers.sh  status_local_llama_servers.sh  stop_local_llama_servers.sh
tests/: ragcore_smoke.cpp  ragcore_work_queue_consumers.cpp
tests/fixtures/: generic-it-incremental.txt  generic-it.txt
